# OctoPrint-ENS160

./: MANIFEST.in  README.md  pyproject.toml
extras/: ens160_test.py
octoprint_ENS160/: __init__.py
octoprint_ENS160/libs/: config.py
octoprint_ENS160/static/js/: ENS160.js
octoprint_ENS160/templates/: ENS160_settings.jinja2
translations/: README.txt
