[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-ENS160"
version = "0.2.0"
description = "Reads ENS160 sensors and adds the data to OctoPrint's temperature data."
readme = {file = "README.md", content-type = "markdown"}
requires-python = ">=3.7, <4"
dynamic = ["license"]
authors = [
    {name = "Andrew J. Erickson", email = "aerickson@gmail.com"}
]
dependencies = [
	# "adafruit-blinka>=6.13.0", 
    # "adafruit-circuitpython-ENS160d>=1.1.19",
    # "adafruit-platformdetect>=3.15.3",
    # "lgpio>=0.2.2.0",
    # "pexpect>=4.8.0",
    # "rpi-gpio>=0.7.1",
    "adafruit-circuitpython-ens160>=1.0.12",
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_ENS160",
    "octoprint_ENS160.*"
]

[project.entry-points."octoprint.plugin"]
ENS160 = "octoprint_ENS160"

[project.urls]
Homepage = "https://github.com/aerickson/OctoPrint-ENS160"